fix(modal) : Mise en page modal/maquette M-HomePage-ModalOpened + fix JS Suppression attr data-error-visible quand data-error === " "

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -148,7 +148,7 @@ main {
   margin: 5% auto;
   width: 100%;
   max-width: 536px;
-  height: 850.61px;
+  /* height: 850.61px; */
   animation-name: modalopen;
   animation-duration: var(--modal-duration);
   background: #232323;
@@ -633,6 +633,32 @@ footer {
     padding: 7.5px 34px;
     font-size: 14px;
     margin-top: 28px;
+  }
+  .bground {
+    background-color: transparent;
+  }
+  .content {
+    padding-top: 10px;
+    margin: 75px auto 0px;
+  }
+  .close {
+    right: 15px;
+    transform: scale(0.5);
+  }
+  .modal-body {
+    margin: 13px auto;
+  }
+
+  .formData {
+    line-height: 10px;
+  }
+  .formData:nth-child(5) {
+    line-height: 20px;
+  }
+  .btn-submit {
+    padding: 7.5px 39px;
+    font-size: 14px;
+    margin-top: 13px;
   }
   .copyrights {
     font-size: 10px;
